---
source: tests/mir_from_hir.rs
expression: project
---
items:
  - Structure:
      name: GainPID
      fields:
        - - k_p
          - Float
        - - k_i
          - Float
        - - k_d
          - Float
  - Function:
      name: min
      inputs:
        - - a
          - Float
        - - b
          - Float
      output: Float
      body:
        statements:
          - Let:
              identifier: test
              expression:
                FunctionCall:
                  function:
                    Identifier:
                      identifier: " > "
                  arguments:
                    - Identifier:
                        identifier: a
                    - Identifier:
                        identifier: b
          - Let:
              identifier: result
              expression:
                IfThenElse:
                  condition:
                    Identifier:
                      identifier: test
                  then_branch:
                    statements:
                      - ExpressionLast:
                          expression:
                            Identifier:
                              identifier: b
                  else_branch:
                    statements:
                      - ExpressionLast:
                          expression:
                            Identifier:
                              identifier: a
          - ExpressionLast:
              expression:
                Identifier:
                  identifier: result
  - NodeFile:
      name: integratei
      imports:
        - Function: min
      input:
        node_name: integratei
        elements:
          - identifier: x
            type: Float
          - identifier: dt
            type: Float
      state:
        node_name: integratei
        elements:
          - Buffer:
              identifier: memprev_i
              type: Float
        step:
          node_name: integratei
          output_type: Float
          body:
            - Let:
                identifier: MAX_INTEGRALE
                expression:
                  Literal:
                    literal:
                      Float: 1000
            - Let:
                identifier: prev_i
                expression:
                  MemoryAccess:
                    identifier: memprev_i
            - Let:
                identifier: i
                expression:
                  FunctionCall:
                    function:
                      Identifier:
                        identifier: min
                    arguments:
                      - FunctionCall:
                          function:
                            Identifier:
                              identifier: " + "
                          arguments:
                            - Identifier:
                                identifier: prev_i
                            - FunctionCall:
                                function:
                                  Identifier:
                                    identifier: " * "
                                arguments:
                                  - InputAccess:
                                      identifier: x
                                  - InputAccess:
                                      identifier: dt
                      - Identifier:
                          identifier: MAX_INTEGRALE
          state_elements_step:
            - identifier: memprev_i
              expression:
                Identifier:
                  identifier: i
          output_expression:
            Identifier:
              identifier: i
        init:
          node_name: integratei
          state_elements_init:
            - BufferInit:
                identifier: memprev_i
                initial_value:
                  Float: 0
  - NodeFile:
      name: derived
      imports: []
      input:
        node_name: derived
        elements:
          - identifier: x
            type: Float
          - identifier: dt
            type: Float
      state:
        node_name: derived
        elements:
          - Buffer:
              identifier: memprev_x
              type: Float
        step:
          node_name: derived
          output_type: Float
          body:
            - Let:
                identifier: prev_x
                expression:
                  MemoryAccess:
                    identifier: memprev_x
            - Let:
                identifier: d
                expression:
                  FunctionCall:
                    function:
                      Identifier:
                        identifier: " / "
                    arguments:
                      - FunctionCall:
                          function:
                            Identifier:
                              identifier: (_)
                          arguments:
                            - FunctionCall:
                                function:
                                  Identifier:
                                    identifier: " - "
                                arguments:
                                  - InputAccess:
                                      identifier: x
                                  - Identifier:
                                      identifier: prev_x
                      - InputAccess:
                          identifier: dt
          state_elements_step:
            - identifier: memprev_x
              expression:
                InputAccess:
                  identifier: x
          output_expression:
            Identifier:
              identifier: d
        init:
          node_name: derived
          state_elements_init:
            - BufferInit:
                identifier: memprev_x
                initial_value:
                  Float: 0
  - NodeFile:
      name: pidu
      imports:
        - NodeFile: derived
        - NodeFile: integratei
        - Structure: GainPID
      input:
        node_name: pidu
        elements:
          - identifier: v_c
            type: Float
          - identifier: v
            type: Float
          - identifier: dt
            type: Float
      state:
        node_name: pidu
        elements:
          - CalledNode:
              identifier: derivede_d
              node_name: derived
          - CalledNode:
              identifier: integrateie_i
              node_name: integratei
        step:
          node_name: pidu
          output_type: Float
          body:
            - Let:
                identifier: e
                expression:
                  FunctionCall:
                    function:
                      Identifier:
                        identifier: " - "
                    arguments:
                      - InputAccess:
                          identifier: v_c
                      - InputAccess:
                          identifier: v
            - LetTuple:
                identifiers:
                  - derivede_d
                  - e_d
                expression:
                  NodeCall:
                    node_identifier: derivede_d
                    input_name: derivedInput
                    input_fields:
                      - - x
                        - Identifier:
                            identifier: e
                      - - dt
                        - InputAccess:
                            identifier: dt
            - LetTuple:
                identifiers:
                  - integrateie_i
                  - e_i
                expression:
                  NodeCall:
                    node_identifier: integrateie_i
                    input_name: integrateiInput
                    input_fields:
                      - - x
                        - Identifier:
                            identifier: e
                      - - dt
                        - InputAccess:
                            identifier: dt
            - Let:
                identifier: gain
                expression:
                  Structure:
                    name: GainPID
                    fields:
                      - - k_p
                        - Literal:
                            literal:
                              Float: 0.2
                      - - k_i
                        - Literal:
                            literal:
                              Float: 1.5
                      - - k_d
                        - Literal:
                            literal:
                              Float: 6
            - Let:
                identifier: u
                expression:
                  Match:
                    matched:
                      Identifier:
                        identifier: gain
                    arms:
                      - - Structure:
                            name: GainPID
                            fields:
                              - - k_p
                                - Identifier:
                                    name: k_p
                                    location: ~
                              - - k_i
                                - Identifier:
                                    name: k_i
                                    location: ~
                              - - k_d
                                - Identifier:
                                    name: k_d
                                    location: ~
                            location: ~
                        - ~
                        - FunctionCall:
                            function:
                              Identifier:
                                identifier: " + "
                            arguments:
                              - FunctionCall:
                                  function:
                                    Identifier:
                                      identifier: " + "
                                  arguments:
                                    - FunctionCall:
                                        function:
                                          Identifier:
                                            identifier: " * "
                                        arguments:
                                          - Identifier:
                                              identifier: k_p
                                          - Identifier:
                                              identifier: e
                                    - FunctionCall:
                                        function:
                                          Identifier:
                                            identifier: " * "
                                        arguments:
                                          - Identifier:
                                              identifier: k_i
                                          - Identifier:
                                              identifier: e_i
                              - FunctionCall:
                                  function:
                                    Identifier:
                                      identifier: " * "
                                  arguments:
                                    - Identifier:
                                        identifier: k_d
                                    - Identifier:
                                        identifier: e_d
          state_elements_step:
            - identifier: derivede_d
              expression:
                Identifier:
                  identifier: derivede_d
            - identifier: integrateie_i
              expression:
                Identifier:
                  identifier: integrateie_i
          output_expression:
            Identifier:
              identifier: u
        init:
          node_name: pidu
          state_elements_init:
            - CalledNodeInit:
                identifier: derivede_d
                node_name: derived
            - CalledNodeInit:
                identifier: integrateie_i
                node_name: integratei

